--- a/02-node.js-criando-uma-API-rest-com-express-e-mongoDB/package.json
+++ b/02-node.js-criando-uma-API-rest-com-express-e-mongoDB/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.18.1",
     "mongodb": "^6.14.2",
     "mongoose": "^7.3.4",
