--- a/03-node.js-lidando-com-buscas-filtros-paginacao-erros-em-uma-API/package.json
+++ b/03-node.js-lidando-com-buscas-filtros-paginacao-erros-em-uma-API/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
